# practice

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt  setup.py
