[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
setuptools = "65.5.1"


[build-system]
requires = ["poetry-core>=1.0.0", "setuptools<58.0.0"]
build-backend = "poetry.core.masonry.api"
